--- a/ReportDesigner/PropertiesModule/PropertiesModule.csproj
+++ b/ReportDesigner/PropertiesModule/PropertiesModule.csproj
@@ -96,6 +96,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PropertiesModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -109,14 +110,26 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="ViewModels\HyperlinkPropertyViewModel.cs" />
+    <Compile Include="ViewModels\IHyperlinkPropertyViewModel.cs" />
+    <Compile Include="ViewModels\IImagePropertyViewModel.cs" />
+    <Compile Include="ViewModels\ImagePropertyViewModel.cs" />
+    <Compile Include="ViewModels\IShapesPropertyViewModel.cs" />
+    <Compile Include="ViewModels\ITextPropertyViewModel.cs" />
+    <Compile Include="ViewModels\ShapesPropertyViewModel.cs" />
+    <Compile Include="ViewModels\TextPropertyViewModel.cs" />
     <Compile Include="VIews\HyperlinkPropertyView.xaml.cs">
       <DependentUpon>HyperlinkPropertyView.xaml</DependentUpon>
     </Compile>
     <Compile Include="VIews\ImagePropertyView.xaml.cs">
       <DependentUpon>ImagePropertyView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="VIews\ShapersPropertyView.xaml.cs">
-      <DependentUpon>ShapersPropertyView.xaml</DependentUpon>
+    <Compile Include="VIews\IHyperlinkPropertyView.cs" />
+    <Compile Include="VIews\IImagePropertyView.cs" />
+    <Compile Include="VIews\IShapesPropertyView.cs" />
+    <Compile Include="VIews\ITextPropertyView.cs" />
+    <Compile Include="VIews\ShapesPropertyView.xaml.cs">
+      <DependentUpon>ShapesPropertyView.xaml</DependentUpon>
     </Compile>
     <Compile Include="VIews\TextPropertyView.xaml.cs">
       <DependentUpon>TextPropertyView.xaml</DependentUpon>
@@ -141,7 +154,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="VIews\ShapersPropertyView.xaml">
+    <Page Include="VIews\ShapesPropertyView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -152,7 +165,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="ViewModels\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
